--- a/lite/codelabs/flower_classification/android/start/app/build.gradle
+++ b/lite/codelabs/flower_classification/android/start/app/build.gradle
@@ -20,7 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    // TODO: Add an option to avoid compressing TF Lite model file
+
+    aaptOptions {
+        noCompress "tflite"
+    }
 
     compileOptions {
         sourceCompatibility = '1.8'
@@ -38,7 +41,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     // Build off of nightly TensorFlow Lite
-    // TODO: Add TFLite dependencies
+    implementation('org.tensorflow:tensorflow-lite:0.0.0-nightly') { changing = true }
+    implementation('org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly') { changing = true }
+    implementation('org.tensorflow:tensorflow-lite-support:0.0.0-nightly') { changing = true }
 
     // Use local TensorFlow library
     // implementation 'org.tensorflow:tensorflow-lite-local:0.0.0'
